fixed screen 5 bug, killed Gozong's form tags. sorry

--- a/templates/screen5.html
+++ b/templates/screen5.html
@@ -1,12 +1,11 @@
-<h1 align="center">{{name}} - Round {{round}} Pairings!!!</h1>
+<h1 align="center">{{name}} - Round {{round}} Pairings</h1>
 <p align="center">Swap list: {{swapList}}</p>
 <p align="center" ng-show = "round == 3">Round 3 coin flip results: Tab Director must switch Plaintiff/Defense if the coin comes up tails.
 	<input type="button" class="btn btn-default" value="Current result: {{flip}}" ng-click ="flipSides()">
 </p>
 	<div ng-init="pairTeams()">
-			<form id="devTest">
-			<table cellspacing="0" cellpadding="0" class="setTeamCard">
-				<colgroup span="2"></colgroup>
+		<table cellspacing="0" cellpadding="0" class="setTeamCard">
+			<colgroup span="2"></colgroup>
 				<tbody>
 					<tr class="status" >
 					    <th scope="col" title="Plaintiff" style="text-align:center"><h3>Plaintiff</h3></th>
@@ -42,7 +41,6 @@
 							</p>
 						</td>
 					</tr>
-					
 				</tbody>
 			</table>
 		<input type="button" class="btn btn-default" ng-disabled="devTest.$invalid" ng-click = "saveSwaps()" value="Enter Round {{round}} Results" ui-sref="screen4" id="startR_button"></form>	
