Completed auto populate for screen 3.

--- a/templates/screen3.html
+++ b/templates/screen3.html
@@ -64,7 +64,7 @@
 				</tr>
 			</tbody>
 		</table>
-		<input type="button" class="btn btn-default" ng-click = "startR1()" ui-sref="screen4" value="Start Round 1" id="startR_button" ng-disabled="teamCards.$invalid"><br><br>
+		<input type="button" class="btn btn-default" ng-click = "startR1()" ui-sref="screen4" value="Start Round 1" id="startR_button" name="startR_button" ng-disabled="teamCards.$invalid"><br><br>
 		<br></br>
 		</form>
 	</div>
