Auto populate on screen 3 no longer overrides bye team information.

--- a/templates/screen3.html
+++ b/templates/screen3.html
@@ -1,6 +1,6 @@
 <h1 align="center">{{name}}</h1>
 <h3 align="center">Enter Team Information for Round {{round}} Pairings:</h3>
-<input type="button" ng-click="runAutoPop()" value="Run Auto-Populate">
+<input type="button" class="btn btn-default" ng-click="runAutoPop(pairing)" value="Run Auto-Populate">
 	<div id="enterTeams" ng-init = "configTeams()" class="cardTableTop">
 		<form name="teamCards" id="teamCards">
 			<table cellspacing="0" cellpadding="0" id="teamSetUpTable" class="setTeamCard">
