Got the button on the How-to page to center

--- a/templates/screen7.html
+++ b/templates/screen7.html
@@ -61,5 +61,4 @@
     </div>
 	
 	
-	<a type="button" ui-sref="screen2" class="btn btn-default btn-lg"><span class="network-name">Start Tracking Your Trials!</span></a>
-	
+	<center><a type="button" ui-sref="screen2" class="btn btn-default btn-lg"><span class="network-name">Start Tracking Your Trials!</span></a></center>
