Most recent work.

--- a/templates/screen3.html
+++ b/templates/screen3.html
@@ -11,7 +11,7 @@
 						<th scope="col" title="Defense" style="text-align:center"><h3>Defense</h3></th>
 					</tr>
 					<tr ng-repeat="pair in pairings"> <!--Don't have ID attributes in repeat-->
-					<td>
+					<td style="width: 900px;">
 						<div id="teamCardFormP" class="teamCard form-horizontal">
 							<div class="form-group">
 								<label for="TeamNumber" class="col-sm-2 control-label"> Team {{pair.pTeam.rank+1}} </label> 
@@ -35,6 +35,7 @@
 								</div>
 							</div>
 						</div>
+													<center><h2>V</h2></center>
 					</td>
 					<td >
 						<div id="teamCardFormD" class="teamCard form-horizontal">
