--- a/templates/screen4.html
+++ b/templates/screen4.html
@@ -2,6 +2,7 @@
 <p align="center" ng-show = "round == 1">Coin Flip Results: 
 	<select ng-model = "flip1" ng-options="side for side in coinflip" required></select>
 </p>
+<input type="button" class="btn btn-default" ng-click="autoPopScores()" value="Run Auto-Populate">
 	<div id="teamChoicesSummary" ng-init="showTeams()">
 		<form name="teamCards">	
 			<table cellspacing="0" cellpadding="0" id="teamRanktable" class="setTeamCard">
@@ -19,7 +20,7 @@
 									<b>Team Record:</b> {{pair.pTeam.record + pair.pTeam.tempRecord}} <br>
 									<b>Team CS:</b> {{pair.pTeam.combinedStr}} <br>
 									<b>Team PD:</b> {{pair.pTeam.pointDiff + pair.pTeam.temp1 + pair.pTeam.temp2}} <br>
-									<b>Ballots Won:</b> <select ng-model = "pair.pTeam.tempRecord" ng-options="value for value in values" required></select> <br>
+									<b>Ballots Won:</b> <select ng-model = "pair.pTeam.tempRecord" ng-options="value for value in values" name="dropDownRecord" required></select> <br>
 									<b>Ballot 1 result: </b> <input type="number" ng-model="pair.pTeam.temp1" id="ballot1pd" min="-126" max="126" placeholder="-126 to +126" required></input> <br>
 									<b>Ballot 2 result: </b> <input type="number" ng-model="pair.pTeam.temp2" id="ballot2pd" min="-126" max="126" placeholder="-126 to +126" required></input> <br>
 								</div>
@@ -32,7 +33,7 @@
 									<b>Team Record:</b> {{pair.dTeam.record + pair.dTeam.tempRecord}} <br>
 									<b>Team CS:</b> {{pair.dTeam.combinedStr}} <br>
 									<b>Team PD:</b> {{pair.dTeam.pointDiff + pair.dTeam.temp1 + pair.dTeam.temp2}} <br>
-									<b>Ballots Won:</b> <select ng-model = "pair.dTeam.tempRecord" ng-options="value for value in values" required></select> <br>
+									<b>Ballots Won:</b> <select ng-model = "pair.dTeam.tempRecord" name="dropDownRecord" ng-options="value for value in values" required></select> <br>
 									<b>Ballot 1 result: </b> <input type="number" ng-model="pair.dTeam.temp1" id="ballot1pd" min="-126" max="126" placeholder="-126 to +126" required></input> <br>
 									<b>Ballot 2 result: </b> <input type="number" ng-model="pair.dTeam.temp2" id="ballot2pd" min="-126" max="126" placeholder="-126 to +126" required></input> <br>
 								</div>
