Have step 2 of how-to correctly showing now

--- a/templates/screen7.html
+++ b/templates/screen7.html
@@ -19,10 +19,10 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Step 2: </h2>
-                    <p class="lead">Enter all team names and team IDs in the form fields indicated by the arrows. Afterwards, hit the submit button. </p>
+                    <p class="lead">Enter all team names, number and impermissibles in the form fields indicated by the arrows. Afterwards, hit the submit button. </p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="resources/img/HTscreen2" alt="">
+                    <img class="img-responsive" src="resources/img/HTscreen2.png" alt="">
                 </div>
             </div>
         </div>
