--- a/templates/screen4.html
+++ b/templates/screen4.html
@@ -10,6 +10,7 @@
 				<tbody>
 					<tr class="status">
 					    <th scope="col" style="text-align:center" title="Plaintiff"><h3>Plaintiff</h3></th>
+						<th scope="col" title="Plaintiff" style="text-align:center"><h3>versus</h3></th>
 						<th scope="col" style="text-align:center" title="Defense"><h3>Defense</h3></th>
 					</tr>
 					<tr ng-repeat="pair in this.pairings">
@@ -26,6 +27,10 @@
 								</div>
 							<!--</form>-->
 						</td>
+						
+											<td width="20px"><center><h2>v.</h2></center></td>
+
+											
 						<td>
 							<!--<form id="resultsFormd" class="teamCard">-->
 								<div id="teamCardFormD" class="teamCard form-horizontal">
