--- a/templates/screen4.html
+++ b/templates/screen4.html
@@ -20,9 +20,26 @@
 									<b>Team Record:</b> {{pair.pTeam.record + pair.pTeam.tempRecord}} <br>
 									<b>Team CS:</b> {{pair.pTeam.combinedStr}} <br>
 									<b>Team PD:</b> {{pair.pTeam.pointDiff + pair.pTeam.temp1 + pair.pTeam.temp2}} <br>
-									<b>Ballots Won:</b> <select ng-model = "pair.pTeam.tempRecord" ng-options="value for value in values" name="dropDownRecord" required></select> <br>
-									<b>Ballot 1 result: </b> <input type="number" ng-model="pair.pTeam.temp1" id="ballot1pd" min="-126" max="126" placeholder="-126 to +126" required></input> <br>
-									<b>Ballot 2 result: </b> <input type="number" ng-model="pair.pTeam.temp2" id="ballot2pd" min="-126" max="126" placeholder="-126 to +126" required></input> <br>
+										<div class="form-group">
+											<label for="BallotsWon" class="col-sm-3 control-label"> Ballots Won: </label>
+											<div class="col-sm-5 col-xs-8">
+												<select ng-model = "pair.pTeam.tempRecord" ng-options="value for value in values" name="dropDownRecord" class="form-control" required></select> 
+											</div>
+										</div>
+										<div class="form-group">
+											<label for="Ballot1" class="col-sm-3 control-label"> Ballot 1 Result: </label>
+											<div class="col-sm-5 col-xs-8">
+												<input type="number" ng-model="pair.pTeam.temp1" id="ballot1pd" min="-126" max="126" placeholder="-126 to +126" class="form-control" required></input> 
+											</div>
+										</div>
+										<div class="form-group">
+											<label for="Ballot2" class="col-sm-3 control-label"> Ballot 2 Result: </label>
+											<div class="col-sm-5 col-xs-8">
+												<input type="number" ng-model="pair.pTeam.temp2" id="ballot2pd" min="-126" max="126" placeholder="-126 to +126" class="form-control" required></input> 
+											</div>
+										</div>
+										
+									
 								</div>
 							<!--</form>-->
 						</td>
@@ -30,12 +47,35 @@
 							<!--<form id="resultsFormd" class="teamCard">-->
 								<div id="teamCardFormD" class="teamCard form-horizontal">
 									<h4 style="text-align:center"> {{pair.dTeam.name}} - {{pair.dTeam.uniqueID}} </h4> 
-									<b>Team Record:</b> {{pair.dTeam.record + pair.dTeam.tempRecord}} <br>
-									<b>Team CS:</b> {{pair.dTeam.combinedStr}} <br>
-									<b>Team PD:</b> {{pair.dTeam.pointDiff + pair.dTeam.temp1 + pair.dTeam.temp2}} <br>
-									<b>Ballots Won:</b> <select ng-model = "pair.dTeam.tempRecord" name="dropDownRecord" ng-options="value for value in values" required></select> <br>
-									<b>Ballot 1 result: </b> <input type="number" ng-model="pair.dTeam.temp1" id="ballot1pd" min="-126" max="126" placeholder="-126 to +126" required></input> <br>
-									<b>Ballot 2 result: </b> <input type="number" ng-model="pair.dTeam.temp2" id="ballot2pd" min="-126" max="126" placeholder="-126 to +126" required></input> <br>
+									<table>
+									
+									<td style="padding:0 15px 0 15px;">
+										<b>Team Record:</b> {{pair.dTeam.record + pair.dTeam.tempRecord}} <br>
+										<b>Team CS:</b> {{pair.dTeam.combinedStr}} <br>
+										<b>Team PD:</b> {{pair.dTeam.pointDiff + pair.dTeam.temp1 + pair.dTeam.temp2}} <br>
+									</td>
+									<td>
+										<div class="form-group">
+											<label for="BallotsWon" class="col-sm-6 control-label"> Ballots Won: </label>
+											<div class="col-sm-5 col-xs-8">
+												<select ng-model = "pair.dTeam.tempRecord" name="dropDownRecord" ng-options="value for value in values" class="form-control" required></select> <br>
+											</div>
+										</div>
+										<div class="form-group">
+											<label for="Ballot1" class="col-sm-8 control-label"> Ballot 1 Result: </label>
+											<div class="col-sm-5 col-xs-8">
+												<input type="number" ng-model="pair.dTeam.temp1" id="ballot1pd" min="-126" max="126" placeholder="-126 to +126" class="form-control" required></input> 
+											</div>
+										</div>
+										<div class="form-group">
+											<label for="Ballot2" class="col-sm-8 control-label"> Ballot 2 Result: </label>
+											<div class="col-sm-5 col-xs-8">
+												<input type="number" ng-model="pair.dTeam.temp2" id="ballot2pd" min="-126" max="126" placeholder="-126 to +126" class="form-control" required></input> 
+											</div>
+										</div>
+									</td>
+									
+									</table>
 								</div>
 							<!--</form>-->
 						</td>
