--- a/templates/screen6.html
+++ b/templates/screen6.html
@@ -1,3 +1,4 @@
+<img class="backButton" src="resources/img/backbutton.png" ui-sref="screen4">
 <h1 align="center">Final Results</h1>
 	<div ng-init="getWinners()">
 		<table cellspacing="0" cellpadding="0" class="setTeamCard">
