--- a/templates/screen3.html
+++ b/templates/screen3.html
@@ -1,6 +1,4 @@
-<img class="backButton" src="resources/img/backbutton.png" ui-sref="screen2">
-<img class="forwardButton" src="resources/img/forwardbutton.png" align="right" ng-click = "startR1()" ui-sref="screen4" ng-disabled="teamCards.$invalid">
-<h1 align="center">{{name}}.....</h1>
+<h1 align="center">{{name}}</h1>
 <h3 align="center">Enter Team Information for Round {{round}} Pairings:</h3>
 <input type="button" class="btn btn-default" ng-click="runAutoPop(pairing)" value="Run Auto-Populate">
 	<div id="enterTeams" ng-init = "configTeams()" class="cardTableTop">
@@ -70,7 +68,12 @@
 				</tr>
 			</tbody>
 		</table>
-		<input type="button" class="btn btn-default" ng-click = "startR1()" ui-sref="screen4" value="Start Round 1" id="startR_button" name="startR_button" ng-disabled="teamCards.$invalid"><br><br>
+		<img class="backButton" src="resources/img/backbutton.png" ui-sref="screen2">
+<img class="forwardButton" src="resources/img/forwardbutton.png" align="right" ng-click = "startR1()" ui-sref="screen4" ng-disabled="teamCards.$invalid">
+
+		<!--<input type="button" class="btn btn-default" ng-click = "startR1()" ui-sref="screen4" value="Start Round 1" id="startR_button" name="startR_button" ng-disabled="teamCards.$invalid"><br><br>-->
+		<!--GL: Why can't I ng-disable an image in angular js?"--->
+		<!--<input type="button" class="btn btn-default" ng-click = "startR1()" ui-sref="screen4" value="Start Round 1" id="startR_button" name="startR_button" ng-disabled="teamCards.$invalid" style="background-image:url('resources/img/forwardbutton.png');">-->
 		<br></br>
 		</form>
 	</div>
