Changed TrialTracker to TrialTrackr. Changed form looks on screen4

--- a/templates/screen1.html
+++ b/templates/screen1.html
@@ -3,7 +3,7 @@
 	
 	<!-- Header -->
     <div class="intro-header intro-message" background="resources/img/intro-bg.jpg">
-		<h1>TrialTracker</h1>
+		<h1>TrialTrackr</h1>
 		<h3>A Tabulation App</h3> 
 		<hr class="intro-divider">
 		<ul class="list-inline intro-social-buttons">
@@ -11,7 +11,7 @@
 				<a ui-sref="screen2" class="btn btn-default btn-lg"><span class="network-name">Start Tracking Your Trials!</span></a>
 			</li>
 			<li>
-				<a ui-sref="screen7" class="btn btn-default btn-lg"><span class="network-name">Learn How To Use TrialTracker</span></a>
+				<a ui-sref="screen7" class="btn btn-default btn-lg"><span class="network-name">Learn How To Use TrialTrackr</span></a>
 			</li>
 		</ul>
     </div>
@@ -39,7 +39,7 @@
         <div class="container">
 			<div class="col-lg-5 col-sm-6">
 				<h2 class="section-heading">Let us tabulate for you</h2>
-				<p class="lead">TrialTracker is a convenient way to pair teams, adhering to the tabulation manual set by American Mock Trial Association.</p>
+				<p class="lead">TrialTrackr is a convenient way to pair teams, adhering to the tabulation manual set by American Mock Trial Association.</p>
 			</div>
 			<div class="col-lg-5 col-lg-offset-2 col-sm-6">
 				<img class="img-responsive" src="resources/img/PairingCard.png" alt="">
