--- a/templates/screen4.html
+++ b/templates/screen4.html
@@ -56,35 +56,27 @@
 							<!--<form id="resultsFormd" class="teamCard">-->
 								<div id="teamCardFormD" class="teamCard form-horizontal">
 									<h4 style="text-align:center"> {{pair.dTeam.name}} - {{pair.dTeam.uniqueID}} </h4> 
-									<table>
-									
-									<td style="padding:0 15px 0 15px;">
 										<b>Team Record:</b> {{pair.dTeam.record + pair.dTeam.tempRecord}} <br>
 										<b>Team CS:</b> {{pair.dTeam.combinedStr}} <br>
 										<b>Team PD:</b> {{pair.dTeam.pointDiff + pair.dTeam.temp1 + pair.dTeam.temp2}} <br>
-									</td>
-									<td>
 										<div class="form-group">
-											<label for="BallotsWon" class="col-sm-6 control-label"> Ballots Won: </label>
+											<label for="BallotsWon" class="col-sm-3 control-label"> Ballots Won: </label>
 											<div class="col-sm-5 col-xs-8">
-												<select ng-model = "pair.dTeam.tempRecord" name="dropDownRecord" ng-options="value for value in values" class="form-control" required></select> <br>
+												<select ng-model = "pair.dTeam.tempRecord" name="dropDownRecord" ng-options="value for value in values" class="form-control" required></select> 
 											</div>
 										</div>
 										<div class="form-group">
-											<label for="Ballot1" class="col-sm-8 control-label"> Ballot 1 Result: </label>
+											<label for="Ballot1" class="col-sm-3 control-label"> Ballot 1 Result: </label>
 											<div class="col-sm-5 col-xs-8">
 												<input type="number" ng-model="pair.dTeam.temp1" id="ballot1pd" min="-126" max="126" placeholder="-126 to +126" class="form-control" required></input> 
 											</div>
 										</div>
 										<div class="form-group">
-											<label for="Ballot2" class="col-sm-8 control-label"> Ballot 2 Result: </label>
+											<label for="Ballot2" class="col-sm-3 control-label"> Ballot 2 Result: </label>
 											<div class="col-sm-5 col-xs-8">
 												<input type="number" ng-model="pair.dTeam.temp2" id="ballot2pd" min="-126" max="126" placeholder="-126 to +126" class="form-control" required></input> 
 											</div>
 										</div>
-									</td>
-									
-									</table>
 								</div>
 							<!--</form>-->
 						</td>
