--- a/templates/screen2.html
+++ b/templates/screen2.html
@@ -6,6 +6,7 @@
 	</div>
 		
 	<div id="settingUp">
+	<h1 align="center">Tournament Set-Up</h1>
 		<form name="setUpForm" class="setUpCard form-horizontal">
 			<div class="form-group">
 				<label for="TournamentName" class="col-sm-5"> Tournament Name </label>
