--- a/templates/screen5.html
+++ b/templates/screen5.html
@@ -1,5 +1,5 @@
-<img class="backButton" src="resources/img/backbutton.png" ng-click = "undoRound()" ui-sref="screen4"><!--They're both taking you to screen 4, but one is back, and one is forward. the function will have to take in the current round number and check to see which button (forward or back) was pressed to determine which round data in the local storage to load-->
-<img class="forwardButton" src="resources/img/forwardbutton.png" align="right" ng-click = "saveSwaps()" ui-sref="screen4" ng-disabled="teamCards.$invalid">
+<img class="backButton" src="resources/img/backbutton.png" ng-click = "undoRound()" ui-sref="screen4">
+<img class="forwardButton" src="resources/img/forwardbutton.png" align="right" ng-click = "saveSwaps()" ui-sref="screen4">
 <h1 align="center">Round {{round}} - {{name}}</h1>
 <center><div class="directions">Below are the team pairings resulting from round {{round}}. Resolve impermissibles to continue to enter in scores for round {{round+1}}.</div></center>
 
