--- a/templates/screen4.html
+++ b/templates/screen4.html
@@ -84,18 +84,13 @@
 					</tr>
 				</tbody>
 			</table>
-			
-		<!--if the round is not round 4 yet..-->
-		<!--<div id="forwardButton"><input type="button" ng-show = "round != 4" class="btn btn-default" value="Pair Round {{round + 1}}" ng-click="saveRound()" ui-sref="screen5" ng-disabled="teamCards.$invalid" id="startR_button"></div>
-		<!--if its round 4--->
-		<!--<div id="forwardButton"><input type="button" ng-show = "round == 4" class="btn btn-default" value="Show results" ng-click="saveRound()" ui-sref="screen6" ng-disabled="teamCards.$invalid" id="startFinalButton"></div>-->
-		
-		
+	{{teamCards.$invalid}}
+	<input type="button" class="btn btn-default" ng-disabled="teamCards.$invalid" ng-click = "saveRound()" value="See Pairings" ui-sref="screen5" id="startP_button"></form>
 		<!--GL Reminder: The forward button here has a SPECIAL CASE--->
-<img class="backButton" src="resources/img/backbutton.png" ui-sref="screen3">
-<img class="forwardButton" src="resources/img/forwardbutton.png" align="right" ng-click = "saveRound()" ui-sref="screen5" ng-disabled="teamCards.$invalid" ng-show="round != 4">
-<img class="forwardButton" src="resources/img/forwardbutton.png" align="right" ng-click = "saveRound()" ui-sref="screen6" ng-disabled="teamCards.$invalid" ng-show="round == 4">
-<button id="fbutton2" ng-hide="this.hideOverlayButton" ng-click="saveRound()"></button>
+<img class="backButton" src="resources/img/backbutton.png" ng-show = "round == 1" ui-sref="screen3">
+<img class="backButton" src="resources/img/backbutton.png" ng-show = "round != 1" ng-click = "underRound()" ui-sref="screen5">
+<img class="forwardButton" src="resources/img/forwardbutton.png" align="right" ng-click = "saveRound()" ui-sref="screen5" ng-show="round != 4 && !teamCards.$invalid">
+<img class="forwardButton" src="resources/img/forwardbutton.png" align="right" ng-click = "saveRound()" ui-sref="screen6" ng-show="round == 4 && !teamCards.$invalid">
 
 		
 		</form>
