--- a/templates/screen6.html
+++ b/templates/screen6.html
@@ -8,8 +8,7 @@
 						<form class="teamCard">
 							<div id="teamCard" >
 								<b>Final Rank:</b> {{winner.rank}} <br>
-								<b>Team Name:</b> {{winner.name}} <br>
-								<b>Team Number:</b> {{winner.uniqueID}} <br>
+								<b>{{winner.name}} - {{winner.uniqueID}} </b> <br>
 								<b>Team Record:</b> {{winner.record}} <br>
 								<b>Team CS:</b> {{winner.combinedStr}} <br>
 								<b>Team PD:</b> {{winner.pointDiff}} <br>
