--- a/templates/screen2.html
+++ b/templates/screen2.html
@@ -15,7 +15,7 @@
 				</div>
 			</div>
 			<div class="form-group">
-				<label for="TotalTeams" class="col-sm-5"> Total Teams </label> 
+				<label for="TotalTeams" class="col-sm-5"> Total Teams (2 team minimum) </label> 
 				<div class="col-sm-4 col-xs-9">
 					<input type="number" class="form-control" id="totalTeams" placeholder="ex. 20" size="50" max="100" ng-model="number" required >
 				</div>
