--- a/templates/screen4.html
+++ b/templates/screen4.html
@@ -6,7 +6,7 @@
 <!--GL: Auto populate is currently an option for this screen, but numerical values do not seem to persist to the next screen if they're automatically generated vs entered in by hand.-->
 <!--<input type="button" class="btn btn-default" ng-click="autoPopScores()" value="Run Auto-Populate">-->
 	<div id="teamChoicesSummary" ng-init="showTeams()">
-		<form name="teamCards">	
+		<form name="teamCards" id = "teamCards">	
 			<table cellspacing="0" cellpadding="0" id="teamRanktable" class="setTeamCard">
 				<colgroup span="2"></colgroup>
 				<tbody>
@@ -68,7 +68,6 @@
 											<div class="col-sm-5 col-xs-8">
 												<input type="number" ng-model="pair.dTeam.temp1" id="ballot1pd" min="-126" max="126" placeholder="-126 to +126" class="form-control" required></input> 
 											</div>
-											  <span ng-show="teamCards.dropDownRecord.$error.required">Select team record.</span>
 											  <!--GL: A helpful link to angular js+ddl validation. http://stackoverflow.com/questions/15360094/angularjs-dropdown-required-validation-->
 
 										</div>
@@ -87,7 +86,7 @@
 	<input type="button" class="btn btn-default" ng-disabled="teamCards.$invalid" ng-click = "saveRound()" value="See Pairings" ui-sref="screen5" id="startP_button"></form>
 		<!--GL Reminder: The forward button here has a SPECIAL CASE--->
 <img class="backButton" src="resources/img/backbutton.png" ng-show = "round == 1" ui-sref="screen3">
-<img class="backButton" src="resources/img/backbutton.png" ng-show = "round != 1" ng-click = "underRound()" ui-sref="screen5">
+<img class="backButton" src="resources/img/backbutton.png" ng-show = "round != 1" ng-click = "undoRound()" ui-sref="screen4">
 <img class="forwardButton" src="resources/img/forwardbutton.png" align="right" ng-click = "saveRound()" ui-sref="screen5" ng-show="round != 4 && !teamCards.$invalid">
 <img class="forwardButton" src="resources/img/forwardbutton.png" align="right" ng-click = "saveRound()" ui-sref="screen6" ng-show="round == 4 && !teamCards.$invalid">
 
