--- a/templates/screen4.html
+++ b/templates/screen4.html
@@ -84,7 +84,7 @@
 				</tbody>
 			</table>
 	<input type="button" class="btn btn-default" ng-disabled="teamCards.$invalid" ng-click = "saveRound()" ng-show="round != 4" value="See Pairings" ui-sref="screen5" id="startP_button"></form>
-	<input type="button" class="btn btn-default" ng-disabled="teamCards.$invalid" ng-click = "saveRound()" ng-show="round != 4" value="See Results" ui-sref="screen6" id="startP_button"></form>
+	<input type="button" class="btn btn-default" ng-disabled="teamCards.$invalid" ng-click = "saveRound()" ng-show="round == 4" value="See Results" ui-sref="screen6" id="startP_button"></form>
 		<!--GL Reminder: The forward button here has a SPECIAL CASE--->
 <img class="backButton" src="resources/img/backbutton.png" ng-show = "round == 1" ui-sref="screen3">
 <img class="backButton" src="resources/img/backbutton.png" ng-show = "round != 1" ng-click = "undoRound()" ui-sref="screen4">
